完成了图表基本端口的编写，前后端联调
