# MirrorBI-backend/internal/model/dto/req/chart/chart_add_request.go
@@ -1,0 +1,7 @@
+package chart
+
+type ChartAddRequest struct {
+	Goal      string `json:"goal"`      // 目标
+	ChartData string `json:"chartData"` // 图表数据
+	ChartType string `json:"chartType"` // 图表类型
+}
