# MirrorBI-backend/internal/model/dto/res/chart/list_chart_response.go
@@ -1,0 +1,11 @@
+package chart
+
+import (
+	"mrbi/internal/common"
+	"mrbi/internal/model/entity"
+)
+
+type ListChartResponse struct {
+	common.PageResponse
+	Records []entity.Chart `json:"records"` // 图表列表
+}
